--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -353,7 +353,7 @@
 	               				</div>
 	               				
 	               				<div class="vcenter highlight_box col-md-12" style="padding: 20px; margin-top: 20px">
-	               					<h4 style="text-align: center">Data Journey Map</h4>
+	               					<h3 style="text-align: center; color: #0000CD;"> Data Journey Map </h3>
 	               					<div id="journeyFlowChart" class="experience_journey_flow" style="height:420px;display: none;"></div>
 	               				</div>
 	               				
