turn off journey map report to fix bugs

--- a/resources/app-templates/leocdp-admin/modules/analytics/cx-analytics-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/cx-analytics-dashboard.html
@@ -263,7 +263,7 @@
      		   		window.overallCxChart.data = overallCxData;
      		   		window.overallCxChart.update();
 	       		} else {
-	       			window.overallCxChart = renderDonutChartJs('overallCxScoreChart', overallCxData)
+	       			window.overallCxChart = renderDonutChartJs('Overall CX Score', 'overallCxScoreChart', overallCxData)
 	       		}
      		   	
      		   	// 2) profile stats
