--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -80,10 +80,10 @@
 		<!--  Tab Navigation Items -->
 		<ul class="nav nav-tabs" data-tab-content="journey_touchpoint_tabs" > 
 	   		<li class="active" >
-        		<a href="javascript:" data-target-tab="panel_touchpoint_hubs" > <i class="fa fa-list" aria-hidden="true"></i> Touchpoint Hub  </a>
+        		<a href="javascript:" data-target-tab="panel_touchpoint_hubs" > <i class="fa fa-list" aria-hidden="true"></i> Touchpoint Data Hub </a>
        		</li>
        		<li id="tab_data_observers" style="display: none">
-       			<a href="javascript:" data-target-tab="panel_data_observers"  > <i class="fa fa-list" aria-hidden="true"></i> Data Observer </a>
+       			<a href="javascript:" data-target-tab="panel_data_observers"  > <i class="fa fa-list" aria-hidden="true"></i> Event Data Observer </a>
        		</li>
 		</ul>
 
@@ -91,20 +91,18 @@
 
 			<!-- tab 1 content  -->
 			<div class="tab-pane active" id="panel_touchpoint_hubs" >
-				
 				<div class="top_page_header" >
-					<h4> All Touchpoint Hubs in Data Journey Map </h4>
+					<h4> All Touchpoint Data Hubs </h4>
 				</div>
 				<div class="table-responsive">
 		    		<div id="touchpoint_hub_table"></div>
 		    	</div>
-		    	
 			</div>
 			
 			<!-- tab 2 content  -->
 			<div class="tab-pane" id="panel_data_observers" >
 				<div class="top_page_header" >
-					<h4> The list of JavaScript Tag Code, QR Code Images to collect behavioral data, contacts and feedback</h4>
+					<h4> All Event Data Observers  </h4>
 				</div>
 		        <div class="table-responsive">
 		            <div id="data_observers_table"></div>
