add new reports and improve UI

--- a/resources/app-templates/leocdp-admin/modules/system/system-info-configs.html
+++ b/resources/app-templates/leocdp-admin/modules/system/system-info-configs.html
@@ -407,9 +407,9 @@
 
 		    fields: [
 		        { name: "attributeName", title : "Attribute Name", align: 'center' , type: "text", validate: "required", validate: "required", editing: false },
-		        { name: "label", title : "Label", align: 'center' , type: "text", validate: "required", editing: false },
+		        { name: "label", title : "Label", align: 'center' , type: "text", validate: "required", width: 120, editing: false },
 		        { name: "type", title : "Data Type", align: 'center' , type: "text", validate: "required", editing: false },
-		        { name: "dataQualityScore", title : "Data Quality Score", type: "number", align: 'center', width: 70, validate: "required",
+		        { name: "dataQualityScore", title : "Data Quality Score", type: "number", align: 'center', width: 64, validate: "required",
 		        	itemTemplate: function(value, item) { 
 		        		if(value > 0){
 		        			return '<div class="highlight_text positive_dqs"> ' + value + ' </div>'; 
