--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -241,23 +241,6 @@
 	<script src="https://{{baseStaticUrl}}/mediaplayer/mediaplayer.one.min.js?_={{cacheBustingKey}}"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.13.10/mermaid.min.js"></script>
 	
-	<!-- after deps are loaded -->
-	<script>
-		// video player
-		window.mediaPlayerOneReady = function () {
-			// ready to play content
-		}
-		// activity diagram
-		mermaid.mermaidAPI.initialize({
-	        startOnLoad:false
-	    });
-		// inject dynamic configs
-		(function() {
-			window.systemConfig = JSON.parse($('<textarea />').html("{{systemConfigJson}}").text())
-			window.profileContactTypes = JSON.parse($('<textarea />').html("{{contactTypeJson}}").text())
-		})();
-	</script>
-	
 	<!-- LEO Admin Core -->
 	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leo.admin.common.js?admin=1&_={{cacheBustingKey}}"></script>
 	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.router.js?admin=1&_={{cacheBustingKey}}"></script>
@@ -279,6 +262,38 @@
 	
 	<!-- feedback survey -->
 	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leocdp.feedback.survey.js?admin=1&_={{cacheBustingKey}}"></script>
+	
+	<!-- after deps are loaded -->
+	<script>
+		// video player
+		window.mediaPlayerOneReady = function () {
+			// ready to play content
+		}
+		// activity diagram
+		mermaid.mermaidAPI.initialize({
+	        startOnLoad:false
+	    });
+		
+		// inject dynamic configs and load all widgets and templates
+		(function() {
+			window.systemConfig = JSON.parse($('<textarea />').html("{{systemConfigJson}}").text())
+			window.profileContactTypes = JSON.parse($('<textarea />').html("{{contactTypeJson}}").text())
+			
+			var uriList = [
+		        '/view/common-widgets/query-filter-modal.html',
+		        '/view/common-widgets/post-type-selection-modal.html',
+		        '/view/common-widgets/confirm-delete-data-modal.html',
+		        '/view/common-widgets/leo-recommender.html',
+		        		
+		        '/view/templates/tpl-customer-profile-info.html',
+		        '/view/templates/tpl-cx-analytics-dashboard.html',
+		        '/view/templates/tpl-customer-journey-flow.html'
+		    ];
+			uriList.forEach(function (uri) {
+		        loadModalboxHtml(uri + "?admin=1");
+		    });
+		})();
+	</script>
 	
 </body>
 
