--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -8,7 +8,7 @@
 			<span class="icon-bar"></span> <span class="icon-bar"></span>
 		</button>
 
-		<a class="navbar-brand" href="/admin">
+		<a class="navbar-brand" href="/">
 			<img id="logo-img" src="" alt="MainLogo" style="display: none;" />
 		</a>
 
