Touchpoint Flow Report Statistics

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -310,7 +310,9 @@
 								<!-- Touchpoint Flow Network -->
 								<div class="col-md-12" >
 									<h4 class="highlight_text" > <i class="fa fa-info-circle" aria-hidden="true"></i> Touchpoint Flow Network </h4> 
-									<div id="profileTouchpointFlow" style="height: 640px; width: 100%;"></div>
+									<div id="profileTouchpointFlow" style="height: 640px; width: 100%;">
+										<div class="loader"></div>
+									</div>
 								</div>
 	               				
 	               				<div class="col-md-12" style="display: none;">
