--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -146,60 +146,60 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/easy-autocomplete/1.3.5/jquery.easy-autocomplete.min.js"></script>
 	
 	<!-- jQuery Tags Input for keywords  -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/jquery-tagsinput/1.3.6/jquery.tagsinput.min.css" rel="stylesheet">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-tagsinput/1.3.6/jquery.tagsinput.min.js"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/jquery-tagsinput/1.3.6/jquery.tagsinput.min.css" rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-tagsinput/1.3.6/jquery.tagsinput.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 	<!-- Pagination -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.css" rel="stylesheet" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.css" rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"crossorigin="anonymous" referrerpolicy="no-referrer"/>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- ChartJS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.0.0/chartjs-plugin-datalabels.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/chartjs-chart-sankey@latest"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.0.0/chartjs-plugin-datalabels.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chartjs-chart-sankey@latest" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- CodeMirror for HTML Editor -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.4/codemirror.css" rel="stylesheet" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.4/codemirror.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.4/mode/xml/xml.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.4/mode/css/css.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.4/mode/javascript/javascript.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.4/mode/htmlmixed/htmlmixed.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.4/addon/fold/xml-fold.min.js" ></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.4/addon/edit/matchbrackets.min.js" ></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.4/addon/edit/matchtags.min.js" ></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.4/codemirror.css" rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.4/codemirror.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.4/mode/xml/xml.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.4/mode/css/css.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.4/mode/javascript/javascript.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.4/mode/htmlmixed/htmlmixed.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.4/addon/fold/xml-fold.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.4/addon/edit/matchbrackets.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.4/addon/edit/matchtags.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<script src="https://{{baseStaticUrl}}/js/codemirror/codemirror.yaml.js?_={{cacheBustingKey}}"></script>
 	<script src="https://{{baseStaticUrl}}/js/codemirror/codemirror.formatting.js?_={{cacheBustingKey}}"></script>
 
 	<!-- BotUI CSS and JS  -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/botui/0.3.9/botui.min.css" rel="stylesheet" type="text/css" />
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/botui/0.3.9/botui-theme-default.css" rel="stylesheet" type="text/css" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/botui/0.3.9/botui.min.js"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/botui/0.3.9/botui.min.css" rel="stylesheet" type="text/css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/botui/0.3.9/botui-theme-default.css" rel="stylesheet" type="text/css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/botui/0.3.9/botui.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- jsGrid -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" type="text/css" rel="stylesheet" />
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" type="text/css" rel="stylesheet" />
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- FunnelGraph.js  -->
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/USPA-Technology/funnel-graph-js@v1.4.6/dist/css/main.min.css">
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/USPA-Technology/funnel-graph-js@v1.4.6/dist/css/theme.css">
-	<script src="https://cdn.jsdelivr.net/gh/USPA-Technology/funnel-graph-js@v1.4.6/dist/js/funnel-graph.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/USPA-Technology/funnel-graph-js@v1.4.6/dist/css/main.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/USPA-Technology/funnel-graph-js@v1.4.6/dist/css/theme.css" crossorigin="anonymous" referrerpolicy="no-referrer">
+	<script src="https://cdn.jsdelivr.net/gh/USPA-Technology/funnel-graph-js@v1.4.6/dist/js/funnel-graph.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- Web-socket  -->
-	<script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/vertx/3.6.3/vertx-eventbus.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/vertx/3.6.3/vertx-eventbus.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- Library to copy text to clipboard -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.11/clipboard.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.11/clipboard.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- Modal box -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/eModal/1.2.69/eModal.min.js" ></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/eModal/1.2.69/eModal.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- Keyword Tag cloud -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/wordcloud2.js/1.2.2/wordcloud2.min.js" ></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/wordcloud2.js/1.2.2/wordcloud2.min.js" crossorigin="anonymous" referrerpolicy="no-referrer" ></script>
 	
 	<!-- bootstrap-slider -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/css/bootstrap-slider.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -207,7 +207,7 @@
 	
 	<!-- lightbox2 -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js" ></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css"  />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	
 	<!-- FilePond library -->
 	<script src="https://{{baseStaticUrl}}/js/filepond/filepond-plugin-image-crop.js?_={{cacheBustingKey}}"></script>
@@ -223,10 +223,14 @@
 	<script src="//{{baseAdminApiUrl}}/view/i18n/us.js?admin=1&_={{cacheBustingKey}}"></script>
 	
 	<!-- Cytoscape.js for Graph Visualization -->
-	<script src="https://cdn.jsdelivr.net/npm/cytoscape@3.22.0/dist/cytoscape.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/layout-base@2.0.1/layout-base.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/avsdf-base@1.0.0/avsdf-base.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/cytoscape-avsdf@1.0.0/cytoscape-avsdf.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/cytoscape@3.22.0/dist/cytoscape.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdn.jsdelivr.net/npm/layout-base@2.0.1/layout-base.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdn.jsdelivr.net/npm/avsdf-base@1.0.0/avsdf-base.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdn.jsdelivr.net/npm/cytoscape-avsdf@1.0.0/cytoscape-avsdf.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	
+	<!-- cytoscape-panzoom -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cytoscape-panzoom/2.5.3/cytoscape.js-panzoom.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape-panzoom/2.5.3/cytoscape-panzoom.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
