--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -13,7 +13,7 @@
 		</a>
 
 		<div style="width: 100%;">
-			<input id="main_search_profile" type="text" placeholder="Enter the first name or last name to search profiles" autocomplete="off" >
+			<input id="main_search_profile" type="text" placeholder="Input keywords and press Enter to search profiles by name" autocomplete="off" >
 		</div>
 
 		<!-- Top User Menu -->
