update new features for admin and data operator

--- a/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
@@ -99,8 +99,8 @@
 		         		</a>
 		         	</li>
 		         	<li>
-		         		<a href="javascript:setFlowNetworkGraphFitView()" data-target-tab="panel_flow_network_report" title="Touchpoint Flow Network Report" > 
-		         			<i class="fa fa-connectdevelop" aria-hidden="true"></i> Flow Network Report
+		         		<a href="javascript:setFlowNetworkGraphFitView()" data-target-tab="panel_flow_network_report" title="Network Flow Report" > 
+		         			<i class="fa fa-connectdevelop" aria-hidden="true"></i> Network Flow Report
 		         		</a>
 		         	</li>
 	   			</ul>
