--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -307,9 +307,9 @@
 									<div id="profileEventStatsChart" class="col-lg-12"> </div>
 								</div>
 								
-								<!-- Touchpoint Flow Network -->
+								<!-- Touchpoint Network Flow  -->
 								<div class="col-md-12" >
-									<h4 class="highlight_text" > <i class="fa fa-info-circle" aria-hidden="true"></i> Touchpoint Flow Network </h4> 
+									<h4 class="highlight_text" > <i class="fa fa-info-circle" aria-hidden="true"></i> Touchpoint Network Flow </h4> 
 									<div id="profileTouchpointFlow" style="height: 680px; width: 100%; background-color: #e8e8e8; border-radius: 10px;">
 										<div class="loader"></div>
 									</div>
