--- a/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
@@ -29,6 +29,9 @@
 	#flow_network_report_wrapper {
 		display:block; height:680px; width:100%; background-color:#e8e8e8; border-radius:10px;
 	}
+	.chosen-container {
+		z-index: 100000!important;
+	}
 </style>
 
 
