fix bugs, improve UX

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -281,7 +281,7 @@
 							   	</div>
 							   	
 		                    	<div class="vcenter highlight_box col-md-12" style="padding: 20px 20px 40px 20px;">
-		                    		<h4 id="event_journey_funnel_nodata" style="display: none;"> No data available </h4>		                    		
+		                    		<h4 id="event_journey_funnel_info" ></h4>		                    		
 	                  				<div id="event_journey_funnel" class="funnel" ></div>
 	               				</div>
 	               				
