security improvement, update UI of profile editor

--- a/resources/app-templates/leocdp-admin/modules/system/login-account-list.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-list.html
@@ -63,6 +63,7 @@
                     "contentType": 'application/x-www-form-urlencoded',
                     "data": function (d) {
                         d.usersession = usersession;
+                        d.isLoginManagement = true;
                     },
                     "dataSrc": function ( json ) {
                     	canEditLoginData = json.canEditData;
