--- a/resources/app-templates/leocdp-admin/common-widgets/confirm-delete-data-modal.html
+++ b/resources/app-templates/leocdp-admin/common-widgets/confirm-delete-data-modal.html
@@ -6,7 +6,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title"> Delete Data Confirmation </h4>
+                <h4 class="modal-title"> Confirmation </h4>
             </div>
             <div class="modal-body">
                 <div class="alert alert-danger">
