--- a/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
@@ -107,18 +107,18 @@
 					</div>
 					
 					<div class="form-group row"  >
-						<label class="control-label col-sm-3" for="authorizedSegmentViewers">Authorized login users can view segment</label>
+						<label class="control-label col-sm-3" for="authorizedSegmentViewers">Authorized users can view data</label>
 						<div class="col-sm-9" >
-							<select id="authorizedSegmentViewers" multiple data-placeholder="Choose an authorized viewer" class="select" style="display: none;" >
+							<select id="authorizedSegmentViewers" multiple data-placeholder="Choose an authorized data viewer" class="select" style="display: none;" >
 							  	<!-- list of login accounts -->
 							</select>
 						</div>
 					</div>
 					
 					<div class="form-group row"  >
-						<label class="control-label col-sm-3" for="authorizedSegmentEditors">Authorized login users can update segment</label>
+						<label class="control-label col-sm-3" for="authorizedSegmentEditors">Authorized users can update data</label>
 						<div class="col-sm-9" >
-							<select id="authorizedSegmentEditors" multiple data-placeholder="Choose an authorized editor" class="select" style="display: none;" >
+							<select id="authorizedSegmentEditors" multiple data-placeholder="Choose an authorized data editor" class="select" style="display: none;" >
 							  	<!-- list of login accounts -->
 							</select>
 						</div>
