update survey parser

--- a/resources/app-templates/web-form/template-survey-form.html
+++ b/resources/app-templates/web-form/template-survey-form.html
@@ -34,6 +34,9 @@
 	
 	<!-- Main JS processor for Survey Data -->
 	<script type="text/javascript" src="https://{{baseStaticUrl}}/js/leo-form/leo.survey.processor.js?_={{cacheBustingKey}}"></script>
+	
+	<!-- MarkDown parser -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.0.18/marked.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body style="background-color:transparent;" >
 		
