--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -219,9 +219,6 @@
 	<script src="https://{{baseStaticUrl}}/js/filepond/filepond.js?_={{cacheBustingKey}}"></script>
 	<script src="https://{{baseStaticUrl}}/js/filepond/config-filepond.js?_={{cacheBustingKey}}"></script>
 	
-	<!-- i18n Data Model -->
-	<script src="//{{baseAdminApiUrl}}/view/i18n/us.js?admin=1&_={{cacheBustingKey}}"></script>
-	
 	<!-- Cytoscape.js for Graph Visualization -->
 	<script src="https://cdn.jsdelivr.net/npm/cytoscape@3.22.0/dist/cytoscape.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdn.jsdelivr.net/npm/layout-base@2.0.1/layout-base.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -231,6 +228,9 @@
 	<!-- cytoscape-panzoom -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cytoscape-panzoom/2.5.3/cytoscape.js-panzoom.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape-panzoom/2.5.3/cytoscape-panzoom.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	
+	<!-- i18n Data Model -->
+	<script src="//{{baseAdminApiUrl}}/view/i18n/us.js?admin=1&_={{cacheBustingKey}}"></script>
 </head>
 
 <body>
@@ -250,7 +250,12 @@
 	<!-- ///////////////////////////////////////////////////////////////////////////////////////////// -->
 	
 	<script src="https://{{baseStaticUrl}}/mediaplayer/mediaplayer.one.min.js?_={{cacheBustingKey}}"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.13.10/mermaid.min.js"></script>
+	
+	<!-- mermaid-js: create diagrams and visualizations using text and code -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/9.1.3/mermaid.min.js"></script>
+	
+	<!-- MarkDown parser: create document and rich-text format -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.0.18/marked.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	
 	<!-- LEO Admin Core -->
 	<script src="//{{baseAdminApiUrl}}/view/common-resources{{minifySuffix}}/leo.admin.common.js?admin=1&_={{cacheBustingKey}}"></script>
