upgrade and fix bugs

--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -118,7 +118,7 @@
 				<ul id="customer_hub_menu" class="collapse in" aria-expanded="true">
 					<li id="Profile_Management_Menu" >
 						<a id="Profile_Management" href="#calljs-leoCdpRouter('Profile_Management')" title="All Customer Profiles" > 
-							<i class="fa fa-fw fa-user-circle-o"></i> Profile Management </a>
+							<i class="fa fa-fw fa-users"></i> Profile Management </a>
 					</li>
 					<li id="Segment_Management_Menu" >
 						<a id="Segment_Management" href="#calljs-leoCdpRouter('Segment_Management')" title="All Customer Segments"> 
