Login Editor : load viewable and editable profiles

--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -301,6 +301,7 @@
 		        '/view/common-widgets/confirm-delete-data-modal.html',
 		        '/view/common-widgets/leo-recommender.html',
 		        		
+		        '/view/templates/tpl-customer-profile-list.html',
 		        '/view/templates/tpl-customer-profile-info.html',
 		        '/view/templates/tpl-cx-analytics-dashboard.html',
 		        '/view/templates/tpl-customer-journey-flow.html'
